Fixed text-alignment at smallest viewport size

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -63,6 +63,10 @@
       "job3";
 
     grid-template-columns: 1fr;
+
+    .job {
+      text-align: left;
+    }
   }
 
   .projects {
